# istanbul-ulasim

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: make_sample_gtfs.py
src/istanbul_ulasim/: __init__.py  ckan.py  geodata.py  gtfs.py  iett.py  integrations.py  metro.py  routing.py  server.py
src/istanbul_ulasim/data/: integrations.json  rayli_hatlar.json  rayli_istasyonlar.json
src/istanbul_ulasim/data/sample/: agency.txt  calendar.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
tests/: test_ckan.py  test_core.py  test_geodata.py  test_iett.py  test_metro.py
