[project]
name = "istanbul-ulasim"
version = "0.4.0"
description = "İstanbul toplu taşıma (metro, metrobüs, Marmaray, tramvay, vapur) için GTFS tabanlı MCP sunucusu"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
istanbul-ulasim-mcp = "istanbul_ulasim.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/istanbul_ulasim"]

[tool.hatch.build.targets.wheel.force-include]
"src/istanbul_ulasim/data" = "istanbul_ulasim/data"
